--- a/package.json
+++ b/package.json
@@ -6,7 +6,22 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "ejs": "~1.0.0",
-    "express": "~4.9.8"
+    "aws-sdk": "^2.3.11",
+    "bcrypt-nodejs": "*",
+    "body-parser": "^1.15.1",
+    "connect-multiparty": "^2.0.0",
+    "express": "^4.13.4",
+    "express-busboy": "^2.5.0",
+    "express-fileupload": "0.0.5",
+    "jsonwebtoken": "^6.2.0",
+    "knox": "^0.9.2",
+    "mongoose": "^4.4.17",
+    "morgan": "^1.7.0",
+    "multer": "^1.1.0",
+    "pkgcloud": "^1.3.0",
+    "s3-upload-stream": "^1.0.7",
+    "s3-uploader": "^1.1.0",
+    "s3client": "^0.1.1",
+    "s3fs": "^2.4.5"
   }
 }
