--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "ejs": "~1.0.0",
+    "express": "~4.9.8",
     "aws-sdk": "^2.3.11",
     "bcrypt-nodejs": "*",
     "body-parser": "^1.15.1",
-    "express": "^4.13.4",
     "express-busboy": "^2.5.0",
     "mongoose": "^4.4.17",
     "s3-upload-stream": "^1.0.7"
